--- a/services-products.html
+++ b/services-products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios y Productos - EcoServicios</title>
+    <title>Servicios y Productos - GestionaTusServicios</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="styles/services-products.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
