--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="logo">
                 <i class="fas fa-leaf"></i>
-                <h2>ManageYourServices</h2>
+                <h2>Serviapp</h2>
             </div>
             <div class="menu">
                 <ul>
@@ -86,7 +86,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <i class="fas fa-leaf"></i>
-                <h2>ManageYourServices</h2>
+                <h2>Serviapp</h2>
             </div>
             <div class="footer-links">
                 <h3>Quick Links</h3>
