--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <i class="bi bi-house-gear"></i>
+                <i class="fas fa-leaf"></i>
                 <h2>Serviapp</h2>
             </div>
             <div class="menu">
